# ai-architecture-test

./: README.md  pyproject.toml
src/lighting_tools/: __init__.py  image_test.py
src/lighting_tools/detection/: __init__.py  create_partial_var.py  image_combiner.py  image_detector.py  task1.py  task2.py  task3.py  vari_maker.py
